--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,120 +152,120 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
     ########################## INFRASTRUCTURE PHASE ##########################
-  deploy-infrastructure:
-    docker:
-      # Docker image here that supports AWS CLI
-      - image: amazon/aws-cli:latest
-    steps:
-      # Checkout code from git
-      - checkout
-      # Install dependencies      
-      - run:
-          name: Install tar/gzip utility
-          command: |
-            yum -y install tar
-            yum -y install gzip
-      - run:
-          name: Ensure back-end infrastructure exists
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
-              --tags project=udapeople-backend \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - run:
-          name: Ensure front-end infrastructure exist
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/files/frontend.yml \
-              --tags project=udapeople-frontend \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - run:
-          name: Add back-end ip to ansible inventory
-          command: |
-            # Your code here
-            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
-            cat .circleci/ansible/inventory.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment
+#   deploy-infrastructure:
+#     docker:
+#       # Docker image here that supports AWS CLI
+#       - image: amazon/aws-cli:latest
+#     steps:
+#       # Checkout code from git
+#       - checkout
+#       # Install dependencies      
+#       - run:
+#           name: Install tar/gzip utility
+#           command: |
+#             yum -y install tar
+#             yum -y install gzip
+#       - run:
+#           name: Ensure back-end infrastructure exists
+#           command: |
+#             aws cloudformation deploy \
+#               --template-file .circleci/files/backend.yml \
+#               --tags project=udapeople-backend \
+#               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+#               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+#       - run:
+#           name: Ensure front-end infrastructure exist
+#           command: |
+#             aws cloudformation deploy \
+#               --template-file .circleci/files/frontend.yml \
+#               --tags project=udapeople-frontend \
+#               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+#               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+#       - run:
+#           name: Add back-end ip to ansible inventory
+#           command: |
+#             # Your code here
+#             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+#               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+#               --query 'Reservations[*].Instances[*].PublicIpAddress' \
+#               --output text)
+#             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+#             cat .circleci/ansible/inventory.txt
+#       - persist_to_workspace:
+#           root: ~/
+#           paths:
+#             - project/.circleci/ansible/inventory.txt
+#       # Here's where you will add some code to rollback on failure
+#       - destroy-environment
 
-  configure-infrastructure:
-    docker:
-      # Docker image here that supports Ansible
-      - image: python:3.8-alpine
-    steps:
-      # Checkout code from git
-      - checkout
-      # Add ssh keys with fingerprint      
-      - add_ssh_keys:
-          fingerprints: ["33:9e:76:10:1c:52:27:6c:ce:a8:47:a6:92:91:a7:4d"] # You can get this ID in the section where you registered the SSH Key
-      # attach workspace
-      - attach_workspace:
-          at: ~/
-      # Install dependencies
-      - run:
-          name: Install dependencies
-          command: |
-            # Your code here
-            apk add --update --no-cache tar gzip ansible aws-cli
-      # Configure server
-      - run:
-          name: Configure server
-          command: |
-            echo ENVIRONMENT=production >> "backend/.env"
-            echo NODE_ENV=production >> "backend/.env"
-            echo VERSION=1.0 >> "backend/.env"
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> "backend/.env"
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> "backend/.env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> "backend/.env"
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "backend/.env"
-            cd .circleci/ansible
-            cat inventory.txt
-            ansible-playbook -i inventory.txt configure-server.yml
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment
-########################## DEPLOY PHASE ##########################
+#   configure-infrastructure:
+#     docker:
+#       # Docker image here that supports Ansible
+#       - image: python:3.8-alpine
+#     steps:
+#       # Checkout code from git
+#       - checkout
+#       # Add ssh keys with fingerprint      
+#       - add_ssh_keys:
+#           fingerprints: ["33:9e:76:10:1c:52:27:6c:ce:a8:47:a6:92:91:a7:4d"] # You can get this ID in the section where you registered the SSH Key
+#       # attach workspace
+#       - attach_workspace:
+#           at: ~/
+#       # Install dependencies
+#       - run:
+#           name: Install dependencies
+#           command: |
+#             # Your code here
+#             apk add --update --no-cache tar gzip ansible aws-cli
+#       # Configure server
+#       - run:
+#           name: Configure server
+#           command: |
+#             echo ENVIRONMENT=production >> "backend/.env"
+#             echo NODE_ENV=production >> "backend/.env"
+#             echo VERSION=1.0 >> "backend/.env"
+#             echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> "backend/.env"
+#             echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> "backend/.env"
+#             echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+#             echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+#             echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+#             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+#             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+#             echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> "backend/.env"
+#             echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "backend/.env"
+#             cd .circleci/ansible
+#             cat inventory.txt
+#             ansible-playbook -i inventory.txt configure-server.yml
+#       # Here's where you will add some code to rollback on failure
+#       - destroy-environment
+# ########################## DEPLOY PHASE ##########################
 
-  run-migrations:
-    docker:
-      # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
-    steps:
-      # Checkout code from git
-      - checkout
-      - run:
-          name: Run migrations
-          command: |
-            # Your code here
-            cd backend
-            npm i
-            npm run migrations > migrations_dump.txt
-      - run:
-          name: Send migration results to kvdb
-          command: |
-            # Your code here
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-              curl --insecure https://kvdb.io/8GifJ5EvH4RdX6inkhGjWh/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-              echo "Inserted to kvdb"
-            fi
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment
-      # - revert-migrations
+  # run-migrations:
+  #   docker:
+  #     # Docker image here that supports NodeJS
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           # Your code here
+  #           cd backend
+  #           npm i
+  #           npm run migrations > migrations_dump.txt
+  #     - run:
+  #         name: Send migration results to kvdb
+  #         command: |
+  #           # Your code here
+  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+  #           then
+  #             curl --insecure https://kvdb.io/8GifJ5EvH4RdX6inkhGjWh/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+  #             echo "Inserted to kvdb"
+  #           fi
+  #     # Here's where you will add some code to rollback on failure
+  #     - destroy-environment
+  #     # - revert-migrations
 
   # deploy-frontend:
   #   docker:
