--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,24 +19,29 @@ commands:
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.Workflow_ID >>"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.Workflow_ID >>"
 
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       # Add parameter here
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           # Add when this will run
-#           command: |
-#             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-#             SUCCESS = 1
-#             if(( $SUCCESS==1 ));
-#             then
-#             #  cd ~/project/backend
-#             #  npm install
-#             #  Add revert code here. You can find this in the Getting Started section.
-#               exit 1
-#             fi
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here
+      Workflow_ID:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Revert migrations
+          # Add when this will run
+          when: on_fail
+          command: |
+            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
+            SUCCESS=$(curl --insecure https://kvdb.io/MEr949pLDT5Q8pqYpT8H2D/migration_<< parameters.Workflow_ID >>)
+            echo "Fetch result: $SUCCESS"
+            if(( $SUCCESS == 1 )); 
+            then
+              cd ~/project/backend
+              npm i
+            #  Add revert code here. You can find this in the Getting Started section.
+              npm run migration:revert
+            fi
 
 jobs:
   build-frontend:
@@ -230,7 +235,6 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
-
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
@@ -267,54 +271,47 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment
       # - revert-migrations
-
-  # deploy-frontend:
-  #   docker:
-  #     # Docker image here that supports AWS CLI
-  #     - image: python:3.8-alpine
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     # Add ssh keys with fingerprint
-  #     - add_ssh_keys:
-  #         fingerprints: 
-  #           - "ae:8d:c2:5c:92:73:6c:4b:cd:84:56:21:84:02:f5:7d"
-  #     - attach_workspace:
-  #         at: ~/      
-  #     # Install dependencies
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           # your code here
-  #           apk add --update --no-cache tar gzip curl nodejs npm aws-cli
-  #     - restore_cache:
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #          # your code here
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --output text)
-  #           echo "${BACKEND_IP}"
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "${API_URL}"
-  #           echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-  #           cat frontend/.env
-  #     - run:
-  #         name: Deploy frontend objects
-  #         command: |
-  #           # your code here          
-  #           cd frontend
-  #           npm i
-  #           npm run build
-  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  #     # Here's where you will add some code to rollback on failure             
-  #     - destroy-environment
-  #     # - revert-migrations
-
+  deploy-frontend:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: python:3.8-alpine
+    steps:
+      # Checkout code from git
+      - checkout
+      - attach_workspace:
+          at: ~/      
+      # Install dependencies
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            apk add --update --no-cache tar gzip curl nodejs npm aws-cli
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Get backend url
+          command: |
+           # your code here
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            # your code here          
+            cd frontend
+            npm i
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      # Here's where you will add some code to rollback on failure             
+      - destroy-environment
+      - revert-migrations
 #   deploy-backend:
 #     docker:
 #       # Docker image here that supports Ansible
@@ -411,8 +408,8 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
+      - deploy-frontend:
+          requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
