--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,47 +271,47 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment
       # - revert-migrations
-  deploy-frontend:
-    docker:
-      # Docker image here that supports AWS CLI
-      - image: python:3.8-alpine
-    steps:
-      # Checkout code from git
-      - checkout
-      - attach_workspace:
-          at: ~/      
-      # Install dependencies
-      - run:
-          name: Install dependencies
-          command: |
-            # your code here
-            apk add --update --no-cache tar gzip curl nodejs npm aws-cli
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: Get backend url
-          command: |
-           # your code here
-            export BACKEND_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
-            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
-      - run:
-          name: Deploy frontend objects
-          command: |
-            # your code here          
-            cd frontend
-            npm i
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      # Here's where you will add some code to rollback on failure             
-      - destroy-environment
-      - revert-migrations
+  # deploy-frontend:
+  #   docker:
+  #     # Docker image here that supports AWS CLI
+  #     - image: python:3.8-alpine
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/      
+  #     # Install dependencies
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           # your code here
+  #           apk add --update --no-cache tar gzip curl nodejs npm aws-cli
+  #     - restore_cache:
+  #         keys: [frontend-build]
+  #     - run:
+  #         name: Get backend url
+  #         command: |
+  #          # your code here
+  #           export BACKEND_IP=$(aws ec2 describe-instances \
+  #             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #             --output text)
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "API_URL = ${API_URL}"
+  #           echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+  #           cat frontend/.env
+  #     - run:
+  #         name: Deploy frontend objects
+  #         command: |
+  #           # your code here          
+  #           cd frontend
+  #           npm i
+  #           npm run build
+  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+  #     # Here's where you will add some code to rollback on failure             
+  #     - destroy-environment
+  #     - revert-migrations
   # deploy-backend:
   #   docker:
   #     # Docker image here that supports Ansible
@@ -408,8 +408,8 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
