--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,54 +1,59 @@
 ---
-- name: Copy backend files
-  copy:
-    src:  ~/project/artifact.tar.gz
-    dest: /home/ubuntu/artifact.tar.gz
+- name: Update and upgrade packages
   become: true
-
-- name: Extract backend files
-  shell: |
-    cd /home/ubuntu
-    tar -vxf artifact.tar.gz
-    rm artifact.tar.gz
-  become: true
-
-- name: Update APT packages
   apt:
+    upgrade: yes
     update_cache: yes
+    cache_valid_time: 86400
+- name: Remove unneeded deps
   become: true
-
+  apt:
+    autoremove: yes
+- name: Install deps
+  become: true
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 - name: Add Node.js 13
   shell: |
     curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
   become: true
-
 - name: Install Node.js
   apt:
     name: nodejs
     state: present
     update_cache: yes
   become: true
-
 - name: Install pm2
   npm:
     name: pm2
     global: yes
     production: yes
-    state: present
+    state: latest
   become: true
-
 - name: Install dependencies
   shell: |
     cd /home/ubuntu
     npm install
   become: true
-
+- name: Copy backend files
+  copy:
+    src: ~/project/artifact.tar.gz
+    dest: /home/ubuntu/artifact.tar.gz
+  become: true
+- name: Extract backend files
+  shell: |
+    cd /home/ubuntu
+    tar -vxf artifact.tar.gz
+    rm artifact.tar.gz
+  become: true
 - name: Start node
   become: true
   environment:
     ENVIRONMENT: production
     NODE_ENV: production
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"  
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
     TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
