--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,59 +1,55 @@
 ---
-- name: Update and upgrade packages
-  become: true
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
-- name: Remove unneeded deps
-  become: true
-  apt:
-    autoremove: yes
-- name: Install deps
-  become: true
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
-- name: Add Node.js 13
-  shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-  become: true
-- name: Install Node.js
-  apt:
-    name: nodejs
-    state: present
-    update_cache: yes
-  become: true
-- name: Install pm2
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: latest
-  become: true
-- name: Install dependencies
-  shell: |
-    cd /home/ubuntu
-    npm install
-  become: true
 - name: Copy backend files
-  copy:
-    src: ~/project/artifact.tar.gz
-    dest: /home/ubuntu/artifact.tar.gz
   become: true
+  copy:
+    src:  ~/project/artifact.tar.gz
+    dest: /home/ubuntu/artifact.tar.gz
+
 - name: Extract backend files
+  become: true
   shell: |
     cd /home/ubuntu
     tar -vxf artifact.tar.gz
     rm artifact.tar.gz
+
+- name: Update APT packages
   become: true
+  apt:
+    update_cache: yes
+
+
+- name: Add Node.js 13
+  become: true
+  shell: |
+    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+
+- name: Install Node.js
+  become: true
+  apt:
+    name: nodejs
+    state: present
+    update_cache: yes
+
+- name: Install pm2
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    production: yes
+    state: present
+
+- name: Install dependencies
+  become: true
+  shell: |
+    cd /home/ubuntu
+    npm install
+
 - name: Start node
   become: true
   environment:
     ENVIRONMENT: production
     NODE_ENV: production
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"  
     TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
