--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,6 +278,9 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+       # Add ssh keys with fingerprint
+      - add_ssh_keys:
+          fingerprints: ["a5:e3:b0:81:d8:22:92:57:54:08:cd:b4:c7:35:af:13"]     
       - attach_workspace:
           at: ~/
       # Install dependencies
@@ -305,6 +308,8 @@ jobs:
           command: |
             # your code here          
             cd frontend
+            sudo npm install -g npm@latest
+            rm -rf node_modules
             npm i
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
@@ -333,22 +338,19 @@ jobs:
             # your code here
             apk add --update --no-cache tar gzip curl nodejs npm ansible aws-cli
       - run:
-          name: Deploy backend and run ansible
+          name: Deploy backend
           command: |
-            # your code here          
             cd backend
             npm i
             npm run build
-            ls
-            pwd            
             cd ..
+            # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
             # cp artifact.tar.gz .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
-            echo "Contents  of the inventory.txt file is -------"
+            echo "Contents of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations
 
