--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: "wait 60 seconds for target connection to become reachable/usable."
+  wait_for_connection:
+    timeout: 60
 - name: Copy backend files
   become: true
   copy:
