--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,6 +341,8 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
+            sudo npm install -g npm@latest
+            rm -rf node_modules
             npm i
             npm run build
             cd ..
