--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,7 +308,7 @@ jobs:
           command: |
             # your code here          
             cd frontend
-            sudo npm install -g npm@latest
+            npm install -g npm@latest
             rm -rf node_modules
             npm i
             npm run build
