--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,9 +308,13 @@ jobs:
           command: |
             # your code here          
             cd frontend
-            npm install -g npm@latest
-            rm -rf node_modules
-            npm install --no-optional
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
+            # npm install -g npm@latest
+            # rm -rf node_modules
+            # npm install --no-optional
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
@@ -341,9 +345,13 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
-            npm install -g npm@latest
-            rm -rf node_modules
-            npm install --no-optional
+            npm i
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
+            # npm install -g npm@latest
+            # rm -rf node_modules
+            # npm install --no-optional
             npm run build
             cd ..
             # Zip the directory
