--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -309,18 +309,12 @@ jobs:
             # your code here          
             cd frontend
             npm i
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-            # npm install -g npm@latest
-            # rm -rf node_modules
-            # npm install --no-optional
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure
-      - destroy-environment
-      - revert-migrations
+      # - destroy-environment
+      # - revert-migrations
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
@@ -346,12 +340,6 @@ jobs:
           command: |
             cd backend
             npm i
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-            # npm install -g npm@latest
-            # rm -rf node_modules
-            # npm install --no-optional
             npm run build
             cd ..
             # Zip the directory
@@ -361,8 +349,8 @@ jobs:
             echo "Contents of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment
-      - revert-migrations
+      # - destroy-environment
+      # - revert-migrations
 
 #   smoke-test:
 #     docker:
